--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>New heading</h1>
-</body>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, aut vel
+      dolores, enim corporis alias commodi accusantium ipsa, fuga temporibus
+      itaque. Culpa ullam earum consequuntur libero vitae nulla consequatur eos.
+    </p>
+  </body>
 </html>
